docs/envoy/v1.10.0/_sources/api-v2/config/filter/network/http_connection_manager/v2/http_connection_manager.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto:

HTTP connection manager
=======================

HTTP connection manager :ref:`configuration overview <config_http_conn_man>`.

.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager:

config.filter.network.http_connection_manager.v2.HttpConnectionManager
----------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L27>`_


.. code-block:: json

  {
    "codec_type": "...",
    "stat_prefix": "...",
    "rds": "{...}",
    "route_config": "{...}",
    "http_filters": [],
    "add_user_agent": "{...}",
    "tracing": "{...}",
    "http_protocol_options": "{...}",
    "http2_protocol_options": "{...}",
    "server_name": "...",
    "max_request_headers_kb": "{...}",
    "idle_timeout": "{...}",
    "stream_idle_timeout": "{...}",
    "request_timeout": "{...}",
    "drain_timeout": "{...}",
    "delayed_close_timeout": "{...}",
    "access_log": [],
    "use_remote_address": "{...}",
    "xff_num_trusted_hops": "...",
    "internal_address_config": "{...}",
    "skip_xff_append": "...",
    "via": "...",
    "generate_request_id": "{...}",
    "forward_client_cert_details": "...",
    "set_current_client_cert_details": "{...}",
    "proxy_100_continue": "...",
    "upgrade_configs": [],
    "normalize_path": "{...}"
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.codec_type:

codec_type
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType <envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType>`) Supplies the type of codec that the connection manager should use.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics for the
  connection manager. See the :ref:`statistics documentation <config_http_conn_man_stats>` for
  more information.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.rds:

rds
  (:ref:`config.filter.network.http_connection_manager.v2.Rds <envoy_api_msg_config.filter.network.http_connection_manager.v2.Rds>`) The connection manager’s route table will be dynamically loaded via the RDS API.
  
  
  
  Precisely one of :ref:`rds <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.rds>`, :ref:`route_config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.route_config>` must be set.
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.route_config:

route_config
  (:ref:`RouteConfiguration <envoy_api_msg_RouteConfiguration>`) The route table for the connection manager is static and is specified in this property.
  
  
  
  Precisely one of :ref:`rds <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.rds>`, :ref:`route_config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.route_config>` must be set.
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.http_filters:

http_filters
  (:ref:`config.filter.network.http_connection_manager.v2.HttpFilter <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpFilter>`) A list of individual HTTP filters that make up the filter chain for
  requests made to the connection manager. Order matters as the filters are
  processed sequentially as request events happen.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.add_user_agent:

add_user_agent
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether the connection manager manipulates the :ref:`config_http_conn_man_headers_user-agent`
  and :ref:`config_http_conn_man_headers_downstream-service-cluster` headers. See the linked
  documentation for more information. Defaults to false.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.tracing:

tracing
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing>`) Presence of the object defines whether the connection manager
  emits :ref:`tracing <arch_overview_tracing>` data to the :ref:`configured tracing provider
  <envoy_api_msg_config.trace.v2.Tracing>`.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.http_protocol_options:

http_protocol_options
  (:ref:`core.Http1ProtocolOptions <envoy_api_msg_core.Http1ProtocolOptions>`) Additional HTTP/1 settings that are passed to the HTTP/1 codec.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.http2_protocol_options:

http2_protocol_options
  (:ref:`core.Http2ProtocolOptions <envoy_api_msg_core.Http2ProtocolOptions>`) Additional HTTP/2 settings that are passed directly to the HTTP/2 codec.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.server_name:

server_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional override that the connection manager will write to the server
  header in responses. If not set, the default is *envoy*.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.max_request_headers_kb:

max_request_headers_kb
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum request headers size for incoming connections.
  If unconfigured, the default max request headers allowed is 60 KiB.
  Requests that exceed this limit will receive a 431 response.
  The max configurable limit is 96 KiB, based on current implementation
  constraints.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.idle_timeout:

idle_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The idle timeout for connections managed by the connection manager. The
  idle timeout is defined as the period in which there are no active
  requests. If not set, there is no idle timeout. When the idle timeout is
  reached the connection will be closed. If the connection is an HTTP/2
  connection a drain sequence will occur prior to closing the connection. See
  :ref:`drain_timeout
  <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.drain_timeout>`.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.stream_idle_timeout:

stream_idle_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The stream idle timeout for connections managed by the connection manager.
  If not specified, this defaults to 5 minutes. The default value was selected
  so as not to interfere with any smaller configured timeouts that may have
  existed in configurations prior to the introduction of this feature, while
  introducing robustness to TCP connections that terminate without a FIN.
  
  This idle timeout applies to new streams and is overridable by the
  :ref:`route-level idle_timeout
  <envoy_api_field_route.RouteAction.idle_timeout>`. Even on a stream in
  which the override applies, prior to receipt of the initial request
  headers, the :ref:`stream_idle_timeout
  <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.stream_idle_timeout>`
  applies. Each time an encode/decode event for headers or data is processed
  for the stream, the timer will be reset. If the timeout fires, the stream
  is terminated with a 408 Request Timeout error code if no upstream response
  header has been received, otherwise a stream reset occurs.
  
  Note that it is possible to idle timeout even if the wire traffic for a stream is non-idle, due
  to the granularity of events presented to the connection manager. For example, while receiving
  very large request headers, it may be the case that there is traffic regularly arriving on the
  wire while the connection manage is only able to observe the end-of-headers event, hence the
  stream may still idle timeout.
  
  A value of 0 will completely disable the connection manager stream idle
  timeout, although per-route idle timeout overrides will continue to apply.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.request_timeout:

request_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) A timeout for idle requests managed by the connection manager.
  The timer is activated when the request is initiated, and is disarmed when the last byte of the
  request is sent upstream (i.e. all decoding filters have processed the request), OR when the
  response is initiated. If not specified or set to 0, this timeout is disabled.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.drain_timeout:

drain_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The time that Envoy will wait between sending an HTTP/2 “shutdown
  notification” (GOAWAY frame with max stream ID) and a final GOAWAY frame.
  This is used so that Envoy provides a grace period for new streams that
  race with the final GOAWAY frame. During this grace period, Envoy will
  continue to accept new streams. After the grace period, a final GOAWAY
  frame is sent and Envoy will start refusing new streams. Draining occurs
  both when a connection hits the idle timeout or during general server
  draining. The default grace period is 5000 milliseconds (5 seconds) if this
  option is not specified.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.delayed_close_timeout:

delayed_close_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The delayed close timeout is for downstream connections managed by the HTTP connection manager.
  It is defined as a grace period after connection close processing has been locally initiated
  during which Envoy will flush the write buffers for the connection and await the peer to close
  (i.e., a TCP FIN/RST is received by Envoy from the downstream connection).
  
  Delaying Envoy's connection close and giving the peer the opportunity to initiate the close
  sequence mitigates a race condition that exists when downstream clients do not drain/process
  data in a connection's receive buffer after a remote close has been detected via a socket
  write(). This race leads to such clients failing to process the response code sent by Envoy,
  which could result in erroneous downstream processing.
  
  If the timeout triggers, Envoy will close the connection's socket.
  
  The default timeout is 1000 ms if this option is not specified.
  
  A value of 0 will completely disable delayed close processing, and the downstream connection's
  socket will be closed immediately after the write flush is completed.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.access_log:

access_log
  (:ref:`config.filter.accesslog.v2.AccessLog <envoy_api_msg_config.filter.accesslog.v2.AccessLog>`) Configuration for :ref:`HTTP access logs <arch_overview_access_logs>`
  emitted by the connection manager.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.use_remote_address:

use_remote_address
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If set to true, the connection manager will use the real remote address
  of the client connection when determining internal versus external origin and manipulating
  various headers. If set to false or absent, the connection manager will use the
  :ref:`config_http_conn_man_headers_x-forwarded-for` HTTP header. See the documentation for
  :ref:`config_http_conn_man_headers_x-forwarded-for`,
  :ref:`config_http_conn_man_headers_x-envoy-internal`, and
  :ref:`config_http_conn_man_headers_x-envoy-external-address` for more information.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.xff_num_trusted_hops:

xff_num_trusted_hops
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of additional ingress proxy hops from the right side of the
  :ref:`config_http_conn_man_headers_x-forwarded-for` HTTP header to trust when
  determining the origin client's IP address. The default is zero if this option
  is not specified. See the documentation for
  :ref:`config_http_conn_man_headers_x-forwarded-for` for more information.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.internal_address_config:

internal_address_config
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig>`) Configures what network addresses are considered internal for stats and header sanitation
  purposes. If unspecified, only RFC1918 IP addresses will be considered internal.
  See the documentation for :ref:`config_http_conn_man_headers_x-envoy-internal` for more
  information about internal/external addresses.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.skip_xff_append:

skip_xff_append
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, Envoy will not append the remote address to the
  :ref:`config_http_conn_man_headers_x-forwarded-for` HTTP header. This may be used in
  conjunction with HTTP filters that explicitly manipulate XFF after the HTTP connection manager
  has mutated the request headers. While :ref:`use_remote_address
  <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.use_remote_address>`
  will also suppress XFF addition, it has consequences for logging and other
  Envoy uses of the remote address, so *skip_xff_append* should be used
  when only an elision of XFF addition is intended.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.via:

via
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Via header value to append to request and response headers. If this is
  empty, no via header will be appended.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.generate_request_id:

generate_request_id
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether the connection manager will generate the :ref:`x-request-id
  <config_http_conn_man_headers_x-request-id>` header if it does not exist. This defaults to
  true. Generating a random UUID4 is expensive so in high throughput scenarios where this feature
  is not desired it can be disabled.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.forward_client_cert_details:

forward_client_cert_details
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails <envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails>`) How to handle the :ref:`config_http_conn_man_headers_x-forwarded-client-cert` (XFCC) HTTP
  header.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.set_current_client_cert_details:

set_current_client_cert_details
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails>`) This field is valid only when :ref:`forward_client_cert_details
  <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.forward_client_cert_details>`
  is APPEND_FORWARD or SANITIZE_SET and the client connection is mTLS. It specifies the fields in
  the client certificate to be forwarded. Note that in the
  :ref:`config_http_conn_man_headers_x-forwarded-client-cert` header, *Hash* is always set, and
  *By* is always set when the client certificate presents the URI type Subject Alternative Name
  value.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.proxy_100_continue:

proxy_100_continue
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If proxy_100_continue is true, Envoy will proxy incoming "Expect:
  100-continue" headers upstream, and forward "100 Continue" responses
  downstream. If this is false or not set, Envoy will instead strip the
  "Expect: 100-continue" header, and send a "100 Continue" response itself.
  
  

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.upgrade_configs:

upgrade_configs
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig>`) 
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.normalize_path:

normalize_path
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Should paths be normalized according to RFC 3986 before any processing of
  requests by HTTP filters or routing? This affects the upstream *:path* header
  as well. For paths that fail this check, Envoy will respond with 400 to
  paths that are malformed. This defaults to false currently but will default
  true in the future. When not specified, this value may be overridden by the
  runtime variable
  :ref:`http_connection_manager.normalize_path<config_http_conn_man_runtime_normalize_path>`.
  See `Normalization and Comparison <https://tools.ietf.org/html/rfc3986#section-6>`
  for details of normalization.
  Note that Envoy does not perform
  `case normalization <https://tools.ietf.org/html/rfc3986#section-6.2.2.1>`
  
  
.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing:

config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing
------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L75>`_


.. code-block:: json

  {
    "operation_name": "...",
    "request_headers_for_tags": [],
    "client_sampling": "{...}",
    "random_sampling": "{...}",
    "overall_sampling": "{...}",
    "verbose": "..."
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.operation_name:

operation_name
  (:ref:`config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName <envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName>`) The span name will be derived from this field.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.request_headers_for_tags:

request_headers_for_tags
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) A list of header names used to create tags for the active span. The header name is used to
  populate the tag name, and the header value is used to populate the tag value. The tag is
  created if the specified header name is present in the request's headers.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.client_sampling:

client_sampling
  (:ref:`type.Percent <envoy_api_msg_type.Percent>`) Target percentage of requests managed by this HTTP connection manager that will be force
  traced if the :ref:`x-client-trace-id <config_http_conn_man_headers_x-client-trace-id>`
  header is set. This field is a direct analog for the runtime variable
  'tracing.client_sampling' in the :ref:`HTTP Connection Manager
  <config_http_conn_man_runtime>`.
  Default: 100%
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.random_sampling:

random_sampling
  (:ref:`type.Percent <envoy_api_msg_type.Percent>`) Target percentage of requests managed by this HTTP connection manager that will be randomly
  selected for trace generation, if not requested by the client or not forced. This field is
  a direct analog for the runtime variable 'tracing.random_sampling' in the
  :ref:`HTTP Connection Manager <config_http_conn_man_runtime>`.
  Default: 100%
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.overall_sampling:

overall_sampling
  (:ref:`type.Percent <envoy_api_msg_type.Percent>`) Target percentage of requests managed by this HTTP connection manager that will be traced
  after all other sampling checks have been applied (client-directed, force tracing, random
  sampling). This field functions as an upper limit on the total configured sampling rate. For
  instance, setting client_sampling to 100% but overall_sampling to 1% will result in only 1%
  of client requests with the appropriate headers to be force traced. This field is a direct
  analog for the runtime variable 'tracing.global_enabled' in the
  :ref:`HTTP Connection Manager <config_http_conn_man_runtime>`.
  Default: 100%
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.verbose:

verbose
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to annotate spans with additional data. If true, spans will include logs for stream
  events.
  
  

.. _envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName:

Enum config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName
-------------------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L76>`_


.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName.INGRESS:

INGRESS
  *(DEFAULT)* ⁣The HTTP listener is used for ingress/incoming requests.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.OperationName.EGRESS:

EGRESS
  ⁣The HTTP listener is used for egress/outgoing requests.
  
  

.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig:

config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig
--------------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L239>`_


.. code-block:: json

  {
    "unix_sockets": "..."
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.InternalAddressConfig.unix_sockets:

unix_sockets
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether unix socket addresses should be considered internal.
  
  


.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails:

config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails
--------------------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L300>`_


.. code-block:: json

  {
    "subject": "{...}",
    "cert": "...",
    "dns": "...",
    "uri": "..."
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails.subject:

subject
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether to forward the subject of the client cert. Defaults to false.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails.cert:

cert
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to forward the entire client cert in URL encoded PEM format. This will appear in the
  XFCC header comma separated from other values with the value Cert="PEM".
  Defaults to false.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails.dns:

dns
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to forward the DNS type Subject Alternative Names of the client cert.
  Defaults to false.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.SetCurrentClientCertDetails.uri:

uri
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether to forward the URI type Subject Alternative Name of the client cert. Defaults to
  false.
  
  


.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig:

config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig
------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L362>`_

The configuration for HTTP upgrades.
For each upgrade type desired, an UpgradeConfig must be added.

.. warning::

   The current implementation of upgrade headers does not handle
   multi-valued upgrade headers. Support for multi-valued headers may be
   added in the future if needed.

.. warning::
   The current implementation of upgrade headers does not work with HTTP/2
   upstreams.

.. code-block:: json

  {
    "upgrade_type": "...",
    "filters": [],
    "enabled": "{...}"
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig.upgrade_type:

upgrade_type
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The case-insensitive name of this upgrade, e.g. "websocket".
  For each upgrade type present in upgrade_configs, requests with
  Upgrade: [upgrade_type]
  will be proxied upstream.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig.filters:

filters
  (:ref:`config.filter.network.http_connection_manager.v2.HttpFilter <envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpFilter>`) If present, this represents the filter chain which will be created for
  this type of upgrade. If no filters are present, the filter chain for
  HTTP connections will be used for this upgrade type.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.UpgradeConfig.enabled:

enabled
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Determines if upgrades are enabled or disabled by default. Defaults to true.
  This can be overridden on a per-route basis with :ref:`cluster
  <envoy_api_field_route.RouteAction.upgrade_configs>` as documented in the
  :ref:`upgrade documentation <arch_overview_websocket>`.
  
  


.. _envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType:

Enum config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType
-------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L28>`_


.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType.AUTO:

AUTO
  *(DEFAULT)* ⁣For every new connection, the connection manager will determine which
  codec to use. This mode supports both ALPN for TLS listeners as well as
  protocol inference for plaintext listeners. If ALPN data is available, it
  is preferred, otherwise protocol inference is used. In almost all cases,
  this is the right option to choose for this setting.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType.HTTP1:

HTTP1
  ⁣The connection manager will assume that the client is speaking HTTP/1.1.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.CodecType.HTTP2:

HTTP2
  ⁣The connection manager will assume that the client is speaking HTTP/2
  (Envoy does not require HTTP/2 to take place over TLS or to use ALPN.
  Prior knowledge is allowed).
  
  

.. _envoy_api_enum_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails:

Enum config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails
----------------------------------------------------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L272>`_

How to handle the :ref:`config_http_conn_man_headers_x-forwarded-client-cert` (XFCC) HTTP
header.

.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails.SANITIZE:

SANITIZE
  *(DEFAULT)* ⁣Do not send the XFCC header to the next hop. This is the default value.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails.FORWARD_ONLY:

FORWARD_ONLY
  ⁣When the client connection is mTLS (Mutual TLS), forward the XFCC header
  in the request.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails.APPEND_FORWARD:

APPEND_FORWARD
  ⁣When the client connection is mTLS, append the client certificate
  information to the request’s XFCC header and forward it.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails.SANITIZE_SET:

SANITIZE_SET
  ⁣When the client connection is mTLS, reset the XFCC header with the client
  certificate information and send it to the next hop.
  
  
.. _envoy_api_enum_value_config.filter.network.http_connection_manager.v2.HttpConnectionManager.ForwardClientCertDetails.ALWAYS_FORWARD_ONLY:

ALWAYS_FORWARD_ONLY
  ⁣Always forward the XFCC header in the request, regardless of whether the
  client connection is mTLS.
  
  

.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.Rds:

config.filter.network.http_connection_manager.v2.Rds
----------------------------------------------------

`[config.filter.network.http_connection_manager.v2.Rds proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L396>`_


.. code-block:: json

  {
    "config_source": "{...}",
    "route_config_name": "..."
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.Rds.config_source:

config_source
  (:ref:`core.ConfigSource <envoy_api_msg_core.ConfigSource>`, *REQUIRED*) Configuration source specifier for RDS.
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.Rds.route_config_name:

route_config_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the route configuration. This name will be passed to the RDS
  API. This allows an Envoy configuration with multiple HTTP listeners (and
  associated HTTP connection manager filters) to use different route
  configurations.
  
  


.. _envoy_api_msg_config.filter.network.http_connection_manager.v2.HttpFilter:

config.filter.network.http_connection_manager.v2.HttpFilter
-----------------------------------------------------------

`[config.filter.network.http_connection_manager.v2.HttpFilter proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/filter/network/http_connection_manager/v2/http_connection_manager.proto#L408>`_


.. code-block:: json

  {
    "name": "...",
    "config": "{...}",
    "typed_config": "{...}"
  }

.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a supported
  filter. The built-in filters are:
  
  * :ref:`envoy.buffer <config_http_filters_buffer>`
  * :ref:`envoy.cors <config_http_filters_cors>`
  * :ref:`envoy.ext_authz <config_http_filters_ext_authz>`
  * :ref:`envoy.fault <config_http_filters_fault_injection>`
  * :ref:`envoy.filters.http.header_to_metadata <config_http_filters_header_to_metadata>`
  * :ref:`envoy.filters.http.grpc_http1_reverse_bridge \
    <config_http_filters_grpc_http1_reverse_bridge>`
  * :ref:`envoy.filters.http.jwt_authn <config_http_filters_jwt_authn>`
  * :ref:`envoy.filters.http.rbac <config_http_filters_rbac>`
  * :ref:`envoy.filters.http.tap <config_http_filters_tap>`
  * :ref:`envoy.gzip <config_http_filters_gzip>`
  * :ref:`envoy.http_dynamo_filter <config_http_filters_dynamo>`
  * :ref:`envoy.grpc_http1_bridge <config_http_filters_grpc_bridge>`
  * :ref:`envoy.grpc_json_transcoder <config_http_filters_grpc_json_transcoder>`
  * :ref:`envoy.grpc_web <config_http_filters_grpc_web>`
  * :ref:`envoy.health_check <config_http_filters_health_check>`
  * :ref:`envoy.ip_tagging <config_http_filters_ip_tagging>`
  * :ref:`envoy.lua <config_http_filters_lua>`
  * :ref:`envoy.rate_limit <config_http_filters_rate_limit>`
  * :ref:`envoy.router <config_http_filters_router>`
  * :ref:`envoy.squash <config_http_filters_squash>`
  
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.config:

config
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) 
  Filter specific configuration which depends on the filter being instantiated. See the supported
  filters for further documentation.
  
  
  Only one of :ref:`config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.config>`, :ref:`typed_config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.typed_config>` may be set.
  
.. _envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  Filter specific configuration which depends on the filter being instantiated. See the supported
  filters for further documentation.
  
  
  Only one of :ref:`config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.config>`, :ref:`typed_config <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpFilter.typed_config>` may be set.
  

